--- a/templates/includes/header.jade
+++ b/templates/includes/header.jade
@@ -3,6 +3,6 @@ header
 		a(href="/"): img(src='images/novlr-logo10.png')
 		.menu
 			ul
-				li: a(href="/about") About
+				li: a(href="/about", title="about novlr") About
 				li: a(href="/features") Features
 				li: a(href="/pricing") Pricing
