--- a/css/default.css
+++ b/css/default.css
@@ -7,11 +7,13 @@ body {
 
 .fullimagewraphome {
 	background: url('/images/novlrbackground.jpg');
-	background-size: 100%;
-	position: fixed;
+	background-size: cover;
+	position: absolute;
 	background-repeat: no-repeat;
 	height: 100%;
 	width: 100%;
+	background-attachment: fixed;
+}
 }
 
 .fullimagewrapfeatures {
@@ -91,7 +93,7 @@ margin-top: 0.5em;
 font-family: Roboto;
 text-decoration: none;
 color: #444;
-padding: 10px 40px;
+padding: 10px 40px 0px;
 border: 1px solid #444;
 margin-top: 30px;
 background: white;
@@ -114,7 +116,7 @@ color: #FFF;
 display: block;
 margin: 0.5em 0 0.5em 0;
 padding: 0;
-font-size: 2em;
+font-size: 200%;
 line-height: 1em;
 }
 
@@ -140,11 +142,12 @@ color: #444;
 .intro-box {
 width: 30%;
 /* float: left; */
-padding: 5% 5%;
+padding: 5% 5% 0;
 
 text-align: center;
-margin: 26% 0 0 58%;
+margin: 20% 0 0 49%;
 line-height: 3em;
+position: absolute;
 }
 
 .container.main a.button:hover {
