--- a/templates/index.jade
+++ b/templates/index.jade
@@ -20,8 +20,6 @@ html
 	body		
 		.container
 			.wrapper
-				
-				h2 #{intro}
 				if(path==='/about') 
 					include includes/about.jade
 				else if(path==='/features') 
@@ -30,4 +28,4 @@ html
 					include includes/pricing.jade
 
 		footer
-			p Novlr: Giving Novel writers no more excuses
+			p Novlr gives novel writers no more excuses
