--- a/templates/includes/head.jade
+++ b/templates/includes/head.jade
@@ -2,3 +2,4 @@ title #{title} | Novlr
 link(rel='stylesheet', href='css/default.css')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Oxygen:300,400,700')
+link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans:400,300')
