thomas changes secure

--- a/templates/includes/about.jade
+++ b/templates/includes/about.jade
@@ -6,7 +6,7 @@ ul
 	li Where to jot down that inspired idea about your protagonist's untimely demise
 	li What to do if you didn't take your laptop to Thailand, but it's raining and you want to write while you wait for the sun to return
 
-p. Novlr is where your novel lives: safe, secure and easily accessible. Novlr takes care of all the logistical bits of writing a novel, just leaving that small matter of the words...to you.
+p. Novlr is where your novel lives: safe, uncluttered and accessible from anywhere. Novlr takes care of all the logistical bits of writing a novel, just leaving that small matter of the words...to you.
 
 
 .product_example
