--- a/templates/index-home.jade
+++ b/templates/index-home.jade
@@ -12,4 +12,9 @@ html
 					a.button(href="/signup") Tell me more
 
 		footer
-			p Novlr: Giving Novel writers no more excuses
+			.socmedia
+				a(href="https://plus.google.com/111202096464040188835"): img(src="/images/google+.png", target="blank", title="Follow Novlr on Google+")
+			.socmediafacebook
+				a(href="http://facebook.com/novlr"): img(src="/images/facebook.png", target="blank", title="Follow Novlr on Facebook")
+			.socmediatwitter
+				a(href="http://twitter.com/mynovlr"): img(src="/images/twitter.png", target="blank", title="Follow Novlr on Twitter")
