css footer tweak homepage

--- a/css/default.css
+++ b/css/default.css
@@ -92,6 +92,7 @@ header img {
 	/* display:none; */
 	position: absolute;
 	background: none;
+	bottom: 0;
 }
 
 .fullimagewraphome .container .main {
