--- a/css/default.css
+++ b/css/default.css
@@ -209,50 +209,60 @@ h1 {
 
 
 
+
 /* FOOTER */
 
 footer {
 	height: 2.5em;
-background: #444;
-color: #FFF;
-font-family: oxygen;
-width: 100%;
-position: absolute;
-padding: 0.5em 0 0;
+	background: #444;
+	color: #FFF;
+	font-family: oxygen;
+	width: 100%;
+	position: absolute;
+	padding: 0.5em 0 0;
 }
 
 footer p {
-margin: 0 auto;
-padding: 0.5em 0 1em 4em;
-height: 1em;
-font-size: 0.9em;
-font-family: Roboto;
-font-weight: lighter;
-float: left;
+	margin: 0 auto;
+	padding: 0.5em 0 1em 4em;
+	height: 1em;
+	font-size: 0.9em;
+	font-family: Roboto;
+	font-weight: lighter;
+	float: left;
 }
 
 .fullimagewraphome footer {
-position: absolute;
-background: none;
+	position: absolute;
+	background: none;
 }
 
 .socmedia {
-margin-left: 4em;
-float: left;
+	margin-left: 4em;
+	float: left;
 }
 
 .socmediafacebook {
-float: left;
-padding-left: 0.3em;
+	float: left;
+	padding-left: 0.3em;
 }
 
 
 
 .fullimagewraphome footer p {
-display: none;
+	display: none;
 }
 
 .socmediatwitter {
-float: left;
-padding-left: 0.5em;
+	float: left;
+	padding-left: 0.5em;
+}
+
+
+/* MEDIA QUERY STUFF */
+
+@media (min-width: 1700px) {
+	h1 {
+	margin-top: 15%;
+	}
 }
