simple features page

--- a/templates/includes/features.jade
+++ b/templates/includes/features.jade
@@ -1,5 +1,44 @@
-p. Quite simply because we've made it the easiest place to do it. Writing a novel is hard enough. Why spend time worrying about whether you've saved your last draft; where to capture that inspired idea about your protagonists untimely demise; whether you can keep writing on the tablet your auntie Agatha splashed out on for your Christmas present?
 
-p. One place where your novel lives: safe, secure and easily accessible. Novlr makes it easy to organise chapters; easy to build character profils; easy to capture notes, thoughts, ideas; easy to share and get feedback and don't worry, we make it easy to export and
+	
+.feature1
+	h2 Find it difficult to focus? Not anymore.
+	p. Novlr puts the focus on your words, stripping back the options and giving you a nice clean space to write. It just feels nice to write on it.
+	img
 
-p. Just leaving the small matter of the words...to you.
+.feature2
+	h2 You won't lose work. Ever.
+	p. Novlr saves your work every couple of seconds so you don't even have to think about it. No more of the nightmares we all recognise.
+	img
+
+.feature3
+	h2 Forgot your laptop? Not a problem
+	p. Novlr is web based, so you can access it from any computer, tablet, or phone with internet access. You don't need to carry it with you anymore.
+	img
+
+.feature4
+	h2 Keep changing your mind? Change is good.
+	p. It takes a long time to get a novel right. We've made chapter organisation simple so you can change things around easily, and quickly add new ones.
+	img
+
+.feature5
+	h2 Bring your characters to life. They deserve it.
+	p. No change in circumstances can repair a defect in character. So said Ralph Waldo Emerson. Novlr agrees and gives each character a profile page: take notes; upload images and videos: give them a back story.
+	img
+
+.features6
+	h2 Find it hard to keep motivated? Let us help.
+	p. Sometimes we all need a bit of carrot or stick ot get words on the page. Set yourself word count targets and setup reminder emails. We'll also celebrate each goal you achieve with you (maybe even with animated gifs).
+	img
+
+.features7
+	h2 Needing a second opinion? Just ask.
+	p. It can be tempting to keep your words close to your chest, but feedback is so valuable. Share chapters, or your whole book, with friends and let them comment directly.
+	img
+
+.features8
+	h2 Hate it when you get locked in? So do we.
+	p. We want you to use Novlr because it's the best tool, not because we've locked you in. So, you can export your work at any time into a range of formats - Word, Pdf etc.
+
+
+.next_page
+	a(href='/pricing') Try it out for free now >>
