--- a/templates/includes/pricing.jade
+++ b/templates/includes/pricing.jade
@@ -1,5 +1,17 @@
-everything shake treat bag but stand in front of the computer screen, throwup on your pillow for stretch claw drapes. Cat snacks throwup on your pillow. Cat snacks intently sniff hand so chew iPad power cord. Stick butt in face sweet beast behind the couch but chew foot. Run in circles chase imaginary bugs leave dead animals as gifts. Shake treat bag climb leg so leave dead animals as gifts stick butt in face. Flop over run in circles so sleep on keyboard. Cat snacks chase mice stand in front of the computer screen, or chew foot or flop over yet nap all day or sun bathe. Mark territory. Sun bathe play time. Use lap as chair destroy couch. Leave hair everywhere chase imaginary bugs sweet beast, but climb leg mark territory. Make muffins. Give attitude play time yet all of a sudden go crazy. Under the bed. Play time sun bathe.</p> 
+h2 When will I be able to try it?
+p. It's early days and Novlr's not ready for trying yet. But sign up now and we'll get you on the free beta as soon it's ready.
 
-p. Sweet beast run in circles. Stretch intently sniff hand. Sweet beast give attitude for give attitude play time sleep on keyboard. All of a sudden go crazy. Swat at dog nap all day so rub face on everything stand in front of the computer screen hide when guests come over for nap all day or use lap as chair. Missing until dinner time destroy couch throwup on your pillow swat at dog. Lick butt chase mice but shake treat bag yet hopped up on goofballs attack feet. Sun bathe leave hair everywhere for swat at dog. Flop over use lap as chair hopped up on goofballs or run in circles for under the bed. Make muffins stick butt in face attack feet. Throwup on your pillow stand in front of the computer screen so chew foot run in circles. Stick butt in face claw drapes for why must they do that flop over. Chew foot hopped up on goofballs. Stick butt in face under the bed climb leg. 
+h2 How much will Novlr cost?
+p. Once Novlr is up and running, we forsee it having a £5 a month subscription fee. 
 
-p. Chew foot sleep on keyboard. Use lap as chair run in circles or throwup on your pillow stare at ceiling hide when guests come over claw drapes. Leave hair everywhere. Intently sniff hand claw drapes, chase imaginary bugs or use lap as chair find something else more interesting chew foot. Hopped up on goofballs find something else more interesting and make muffins and flop over. Lick butt make muffins destroy couch and hide when guests come over. Run in circles. 
+h2 What will I get for that £5 a month?
+p. For that you get the best place to write your novel and all of the <a href="/features"> features we're going to build</a>.
+
+h2 What about paying annually?
+p. At the moment we imagine there will be an annual discount. Not sure what that will be yet.
+
+h2 Will I be locked in? Will it be easy to cancel?
+p. We aren't in the business of tricking you in to paying for things you don't want. You will be able cancel at any point...and if we can get it to work, we may look at being able to pause your account for a while. 
+
+h2 I have more questions
+p. None of the above is set in stone - it's mostly just ideas for now. What we would love is for you to let us know what you think of it all. Drop us a message in the footer.
