--- a/templates/includes/header.jade
+++ b/templates/includes/header.jade
@@ -6,3 +6,4 @@ header
 				li: a(href="/about", title="about novlr") About
 				li: a(href="/features") Features
 				li: a(href="/pricing") Pricing
+				li: a(href="/blog") Blog
