--- a/templates/index-home.jade
+++ b/templates/index-home.jade
@@ -9,6 +9,7 @@ html
 			.wrapper
 				.intro-box
 					h1 #{subheading}
+					h2 Novlr is the best place to write your novel.
 					a.button(href="/signup") Tell me more
 
 		footer
