--- a/css/default.css
+++ b/css/default.css
@@ -238,6 +238,7 @@ footer {
 	width: 100%;
 	position: absolute;
 	padding: 0.5em 0 0;
+	bottom: 0;
 }
 
 footer p {
@@ -291,6 +292,22 @@ font-family: Roboto;
 background: #FFF;
 color: #000;
 }
+
+.fullimagewrap404  {
+background: #444;
+width: 100%;
+height: 100%;
+position: absolute;
+}
+
+.fullimagewrap404 .intro-box {
+margin: 20% auto 0;
+}
+
+.fullimagewrap404 .intro-box h2 {
+line-height: 1.2em;
+}
+
 
 /* MEDIA QUERY STUFF */
 
