--- a/templates/includes/head.jade
+++ b/templates/includes/head.jade
@@ -3,3 +3,4 @@ link(rel='stylesheet', href='css/default.css')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Oxygen:300,400,700')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans:400,300')
+script(src='../js/analytics.js')
