--- a/css/default.css
+++ b/css/default.css
@@ -236,7 +236,7 @@ footer {
 	color: #FFF;
 	font-family: oxygen;
 	width: 100%;
-	position: absolute;
+	position: relative;
 	padding: 0.5em 0 0;
 	bottom: 0;
 }
