--- a/templates/index-home.jade
+++ b/templates/index-home.jade
@@ -10,7 +10,7 @@ html
 				.intro-box
 					h1 #{subheading}
 					h2 Novlr is the best place to write your novel.
-					a.button(href="/signup") Tell me more
+					a.button(href="/blog") Tell me more
 
 		footer
 			.socmedia
