--- a/templates/index.jade
+++ b/templates/index.jade
@@ -6,17 +6,17 @@ html
 		.fullimagewrapabout
 			include includes/header
 			h1 #{h1}
-			a(href='/signup'): .tryit Try it free
+			a(href='/blog'): .tryit Find out more
 	else if(path==='/features')
 		.fullimagewrapfeatures
 			include includes/header
 			h1 #{h1}
-			a(href='/signup'): .tryit Try it free
+			a(href='/blog'): .tryit Find out more
 	else if(path==='/pricing')
 		.fullimagewrappricing
 			include includes/header
 			h1 #{h1}
-			a(href='/signup'): .tryit Try it free
+			a(href='/blog'): .tryit Find out more
 	else
 		.fullimagewrap
 			include includes/header
