--- a/templates/includes/header.jade
+++ b/templates/includes/header.jade
@@ -1,6 +1,6 @@
 header
 	.wrapper
-		a(href="/"): img(src='images/novlr-logo11.png')
+		a(href="/"): img(src='images/novlr.logo.marketing.png')
 		.menu
 			ul
 				li: a(href="/about", title="about novlr") About
