--- a/templates/includes/about.jade
+++ b/templates/includes/about.jade
@@ -12,7 +12,7 @@ p. Novlr is where your novel lives: safe, uncluttered and accessible from anywhe
 .product_example
 	h2 Have a look at what's coming...
 
-	img(src='images/novlrghostmodify.png')
+	img(src='images/nov-wireTM.jpg')
 
 .next_page
 	a(href='/features') See our exciting features >>
