--- a/templates/includes/about.jade
+++ b/templates/includes/about.jade
@@ -1,13 +1,13 @@
-h2 Why is Novlr the best way to write a novel?
+h2 What is Novlr and why is it the best way to write a novel?
 
-p. Quite simply because we've made it the easiest place to do it. Writing a novel is hard enough. Why spend time worrying about: 
+p. We have tried writing novels on all sorts of different platforms and just felt none of them did it well enough. So, we're trying to do it better. We want to make it the easiest place to do it. Writing a novel is hard enough. Why spend time worrying about: 
 ul
 	li Whether you've saved your last draft
 	li Where to jot down that inspired idea about your protagonist's untimely demise
-	li What to do if you didn't take your laptop to Thailand, but it's raining and you want to write while you wait for the sun to return
+	li What to do if you didn't take your laptop to Thailand, but it's raining and you want to write
 
-p. Novlr is where your novel lives: safe, uncluttered and accessible from anywhere. Novlr takes care of all the logistical bits of writing a novel, just leaving that small matter of the words...to you.
-
+p. Novlr is where your novel will live: safe, uncluttered and accessible from anywhere. Novlr will take care of all the logistical bits of writing a novel, just leaving that small matter of the words...to you.
+p. We are at really early days - so any feedback, thoughts, ideas - anything - help us make Novlr as good as possible. Tweet at us, or post your thoughts on our facebook page - links in the footer.
 
 .product_example
 	h2 Have a look at what's coming...
