--- a/templates/includes/features.jade
+++ b/templates/includes/features.jade
@@ -2,12 +2,12 @@
 	
 .feature1
 	h2 Find it difficult to focus? Not anymore.
-	p. Novlr puts the focus on your words, stripping back the options and giving you a nice clean space to write. It just feels nice to write on it.
+	p. Novlr will put the focus on your words, stripping back the options and giving you a nice clean space to write. It'll just feel nice to write on it.
 	img
 
 .feature2
 	h2 You won't lose work. Ever.
-	p. Novlr saves your work every couple of seconds so you don't even have to think about it. No more of the nightmares we all recognise.
+	p. Novlr will save your work every couple of seconds so you don't even have to think about it. No more of the nightmares we all recognise.
 	img
 
 .feature3
@@ -17,12 +17,12 @@
 
 .feature4
 	h2 Keep changing your mind? Change is good.
-	p. It takes a long time to get a novel right. We've made chapter organisation simple so you can change things around easily, and quickly add new ones.
+	p. It takes a long time to get a novel right. We're making chapter organisation simple so you can change things around easily, and quickly add new ones.
 	img
 
 .feature5
 	h2 Bring your characters to life. They deserve it.
-	p. No change in circumstances can repair a defect in character. So said Ralph Waldo Emerson. Novlr agrees and gives each character a profile page: take notes; upload images and videos: give them a back story.
+	p. No change in circumstances can repair a defect in character. So said Ralph Waldo Emerson. Novlr agrees and we're giving each character a profile page: take notes; upload images and videos: give them a back story.
 	img
 
 .features6
@@ -37,4 +37,6 @@
 
 .features8
 	h2 Hate it when you get locked in? So do we.
-	p. We want you to use Novlr because it's the best tool, not because we've locked you in. So, you can export your work at any time into a range of formats - Word, Pdf etc.
+	p. We want you to use Novlr because it's the best tool, not because we've locked you in. So, you'll be able to export your work at any time into a range of formats - Word, Pdf etc.
+
+
