--- a/templates/index.jade
+++ b/templates/index.jade
@@ -6,17 +6,17 @@ html
 		.fullimagewrapabout
 			include includes/header
 			h1 #{h1}
-			a(href='/blog'): .tryit Find out more
+			a(href='http://blog.novlr.org/be-the-first-to-try-novlr/'): .tryit Get your invite
 	else if(path==='/features')
 		.fullimagewrapfeatures
 			include includes/header
 			h1 #{h1}
-			a(href='/blog'): .tryit Find out more
+			a(href='http://blog.novlr.org/be-the-first-to-try-novlr/'): .tryit Get your invite
 	else if(path==='/pricing')
 		.fullimagewrappricing
 			include includes/header
 			h1 #{h1}
-			a(href='/blog'): .tryit Find out more
+			a(href='http://blog.novlr.org/be-the-first-to-try-novlr/'): .tryit Get your invite
 	else
 		.fullimagewrap
 			include includes/header
