--- a/css/default.css
+++ b/css/default.css
@@ -69,14 +69,14 @@ header img {
 	}
 	
 /* MENU */
-.menu {
+.topmenu, .bottommenu {
 	float:right;
 	width:auto;
 	margin-top: 10px;
 	margin-right: 2%;
 }
 
-.menu ul {	
+.topmenu ul, .bottommenu ul {	
 	-webkit-margin-before: 0em;
 	-webkit-margin-after: 0em;
 	-webkit-margin-start: 0px;
@@ -85,11 +85,11 @@ header img {
 	margin-top: 0.5em;
 }
 
-.menu ul li {
+.topmenu ul li, .bottommenu ul li {
 	display:inline;
 	padding: 8px 20px;
 }
-.menu ul li a {
+.topmenu ul li a, .bottommenu ul li a {
 	color: #fff;
 	text-decoration:none;
 	font-family: Roboto;
@@ -97,8 +97,12 @@ header img {
 	font-weight: lighter;
 }
 
-.menu ul li a:hover {
+.topmenu ul li a:hover, .bottommenu ul li a:hover {
 color:#ABD1E2;
+}
+
+.bottommenu {
+display:none;
 }
 
 /* homepage */
@@ -333,4 +337,83 @@ margin-top: 0.5em;
 	h1 {
 	margin-top: 12%;
 	}
+}
+
+@media (max-width: 320px) {
+
+	.logo {
+		width: 165px;
+		margin: 0 auto;	
+	}
+
+	.fullimagewraphome {
+		background: url('/images/backmobile.jpg');
+		background-repeat: no-repeat;
+		background-position-y: 90px;
+	}
+	.topmenu {
+		display:none;
+	}
+	.fullimagewraphome .container .wrapper, .fullimagewrapabout, .fullimagewrapfeatures {
+		padding: 0px 15px;
+	}
+	.fullimagewrapabout, .fullimagewrapfeatures {
+	height: auto;
+	margin: 0;
+	}
+	html {
+		background: #272933;
+	}
+	
+	h1 {
+		font-size: 3em;
+		text-align: left;
+		line-height: 1.2em;
+	}
+	h2 {
+		line-height: 1.2em;
+	}
+	.tryit {
+	width: auto;
+	}
+	
+	.intro-box h1, .intro-box {
+		text-align: left;
+	} 
+	.intro-box {
+		margin-top: 170px;
+	}
+	.container.main a.button {
+		margin-right: 0px;
+	}
+	.bottommenu {
+		display: block;
+		margin-right: 0;
+		text-align: center;
+		margin-top: 0;
+		float: center;
+	}
+	.allsocmedia {
+		position: relative;
+		padding: 0 auto;
+		text-align: center;
+		overflow: hidden;
+		margin: 15px auto 10px;
+		width: 114px;
+		padding-bottom: 10px;
+	}
+	.next_page a {
+		line-height: 1.2em;
+		color: #fff;
+	}
+	footer {
+		height: auto;
+	}
+	.socmedia {
+		margin-left: 0;
+	}
+	.container .wrapper {
+		color: #fff;
+	}
+	
 }
