--- a/templates/includes/header.jade
+++ b/templates/includes/header.jade
@@ -1,7 +1,7 @@
 header
 	.wrapper
-		a(href="/"): img(src='images/Novlr.logo.marketing.png')
-		.menu
+		.logo: a(href="/"): img(src='images/Novlr.logo.marketing.png')
+		.topmenu
 			ul
 				li: a(href="/about", title="about novlr") About
 				li: a(href="/features") Features
