--- a/templates/index-home.jade
+++ b/templates/index-home.jade
@@ -12,9 +12,15 @@ html
 					h2 Novlr is the best place to write your novel.
 					a.button(href="/about") Tell me more
 		footer
-			.socmedia
-				a(href="https://plus.google.com/111202096464040188835"): img(src="/images/google+.png", target="blank", title="Follow Novlr on Google+")
-			.socmediafacebook
-				a(href="http://facebook.com/novlr"): img(src="/images/facebook.png", target="blank", title="Follow Novlr on Facebook")
-			.socmediatwitter
-				a(href="http://twitter.com/mynovlr"): img(src="/images/twitter.png", target="blank", title="Follow Novlr on Twitter")
+			.bottommenu
+				ul
+					li: a(href="/about", title="about novlr") About
+					li: a(href="/features") Features
+					li: a(href="http://blog.novlr.org") Blog
+			.allsocmedia
+				.socmedia
+					a(href="https://plus.google.com/111202096464040188835"): img(src="/images/google+.png", target="blank", title="Follow Novlr on Google+")
+				.socmediafacebook
+					a(href="http://facebook.com/novlr"): img(src="/images/facebook.png", target="blank", title="Follow Novlr on Facebook")
+				.socmediatwitter
+					a(href="http://twitter.com/mynovlr"): img(src="/images/twitter.png", target="blank", title="Follow Novlr on Twitter")
