--- a/templates/index.jade
+++ b/templates/index.jade
@@ -31,10 +31,15 @@ html
 					include includes/pricing.jade
 
 		footer
-			.socmedia
-				a(href="https://plus.google.com/111202096464040188835"): img(src="/images/google+.png", target="blank", title="Follow Novlr on Google+")
-			.socmediafacebook
-				a(href="http://facebook.com/novlr"): img(src="/images/facebook.png", target="blank", title="Follow Novlr on Facebook")
-			.socmediatwitter
-				a(href="http://twitter.com/mynovlr"): img(src="/images/twitter.png", target="blank", title="Follow Novlr on Twitter")
-			p Novlr gives novel writers no more excuses
+			.bottommenu
+				ul
+					li: a(href="/about", title="about novlr") About
+					li: a(href="/features") Features
+					li: a(href="http://blog.novlr.org") Blog
+			.allsocmedia
+				.socmedia
+					a(href="https://plus.google.com/111202096464040188835"): img(src="/images/google+.png", target="blank", title="Follow Novlr on Google+")
+				.socmediafacebook
+					a(href="http://facebook.com/novlr"): img(src="/images/facebook.png", target="blank", title="Follow Novlr on Facebook")
+				.socmediatwitter
+					a(href="http://twitter.com/mynovlr"): img(src="/images/twitter.png", target="blank", title="Follow Novlr on Twitter")
