--- a/css/default.css
+++ b/css/default.css
@@ -18,12 +18,12 @@ font-weight: 100;
 }
 
 .fullimagewraphome {
-	background: url('/images/cafetwo1.jpg');
+	background: url('/images/desktop.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 100%;
-	background-position-x: -69px;
 	background-color: #272933;
+	background-position-x: center;
 }
 
 .fullimagewrapfeatures {
@@ -62,6 +62,11 @@ header .wrapper {
 	margin:0 auto;
 	padding-top:15px;
 }
+
+.fullimagewraphome header {
+background: transparent;
+}
+
 header img {
 	float:left;
 	width: 165px;
@@ -202,7 +207,7 @@ border: 1px solid white;
 }
 
 .fullimagewraphome .container .wrapper {
-	padding: 8% 6% 3% 18%;
+	padding:0;
 }
 
 
@@ -212,6 +217,20 @@ line-height: 3em;
 margin: 0 auto;
 }
 
+.fullimagewraphome .intro-box {
+text-align: center;
+width: 400px;
+margin: 7% auto;
+}
+
+.fullimagewraphome .container.main a.button {
+margin: 0;
+padding: 0.5em 2em;
+}
+.fullimagewraphome .intro-box h1{
+font-size: 1.5em;
+text-align: center;
+}
 .next_page {
 	margin: 5em 0 0;
 	overflow:hidden;
@@ -339,6 +358,20 @@ margin-top: 0.5em;
 	}
 }
 
+@media (min-width: 1400px) {
+
+.fullimagewraphome .intro-box {
+margin: 10% auto;
+}
+}
+
+@media (min-width: 1800px) {
+
+.fullimagewraphome .intro-box {
+margin: 12% auto;
+}
+}
+
 @media (max-width: 320px) {
 
 	.logo {
@@ -417,3 +450,44 @@ margin-top: 0.5em;
 	}
 	
 }
+
+/* 
+.crop {
+  height: 100%;
+  background-size: cover;
+  float: left;
+  border: 10px solid #fff;
+  background-image:url('/images/desktop.jpg');
+  background-position:$left $top;
+  position: relative;
+  overflow: hidden;
+}
+
+.crop:after {
+  border: 1px solid #000;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 40%;
+  position: absolute;
+  border-width: 0 1px 1px 0;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.crop:before {
+  border: 1px solid #000;
+  content: "";
+  left: 50%;
+  top: 40%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.crop + .crop {
+  border-left: 0;
+}
+
+*/
